[gd_scene load_steps=19 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2"]
[ext_resource type="Script" path="res://scripts/obstacle_spawner.gd" id="3"]
[ext_resource type="Script" path="res://scripts/track.gd" id="4"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="5"]
[ext_resource type="Script" path="res://scripts/juice_manager.gd" id="6"]
[ext_resource type="Script" path="res://scripts/solar_surfer.gd" id="7"]
[ext_resource type="Script" path="res://scripts/particle_manager.gd" id="8"]
[ext_resource type="Script" path="res://scripts/pickup_manager.gd" id="9"]
[ext_resource type="Script" path="res://scripts/dev_kit.gd" id="10"]
[ext_resource type="Script" path="res://scripts/storm_hazard.gd" id="11"]
[ext_resource type="Script" path="res://scripts/vox_ignis_environment.gd" id="12"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(0.8, 0.5, 2.2)

[sub_resource type="ProceduralSkyMaterial" id="4"]
sky_top_color = Color(0.1, 0.15, 0.3, 1)
sky_horizon_color = Color(0.6, 0.4, 0.3, 1)
ground_bottom_color = Color(0.1, 0.08, 0.06, 1)
ground_horizon_color = Color(0.6, 0.4, 0.3, 1)

[sub_resource type="Sky" id="5"]
sky_material = SubResource("4")

[sub_resource type="Environment" id="6"]
background_mode = 2
sky = SubResource("5")
ambient_light_source = 2
ambient_light_color = Color(0.4, 0.35, 0.3, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.25, 0.433, 0, 0.866, 0.5, -0.5, -0.433, 0.75, 10, 20, 10)
light_color = Color(1, 0.9, 0.7, 1)
light_energy = 1.2
shadow_enabled = true

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("1")

[node name="SolarSurfer" type="Node3D" parent="Player"]
script = ExtResource("7")

[node name="GameCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9, 0.4, 0, -0.4, 0.9, 0, 6, 12)
fov = 70.0

[node name="ObstacleSpawner" type="Node3D" parent="."]
script = ExtResource("3")

[node name="Track" type="Node3D" parent="."]
script = ExtResource("4")

[node name="VoxIgnisEnvironment" type="Node3D" parent="."]
script = ExtResource("12")

[node name="JuiceManager" type="Node" parent="."]
script = ExtResource("6")

[node name="ParticleManager" type="Node3D" parent="."]
script = ExtResource("8")

[node name="PickupManager" type="Node3D" parent="."]
script = ExtResource("9")

[node name="StormHazard" type="Node3D" parent="."]
script = ExtResource("11")

[node name="DevKit" type="CanvasLayer" parent="."]
layer = 100
script = ExtResource("10")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("5")

[node name="ScreenFlash" type="ColorRect" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="ChargeBar" type="ProgressBar" parent="HUD"]
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0
value = 100.0

[node name="ChargeLabel" type="Label" parent="HUD"]
anchors_preset = 0
offset_left = 20.0
offset_top = 55.0
offset_right = 220.0
offset_bottom = 80.0
text = "SOLAR CHARGE"

[node name="DistanceLabel" type="Label" parent="HUD"]
anchors_preset = 0
offset_left = 20.0
offset_top = 90.0
offset_right = 220.0
offset_bottom = 115.0
text = "Distance: 0m"

[node name="CoinsLabel" type="Label" parent="HUD"]
anchors_preset = 0
offset_left = 20.0
offset_top = 115.0
offset_right = 220.0
offset_bottom = 140.0
pivot_offset = Vector2(0, 12)
text = "Coins: 0"

[node name="ZoneLabel" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
text = "☀ LIGHT ZONE"
horizontal_alignment = 2
autowrap_mode = 0
text_overrun_behavior = 3

[node name="SpeedLabel" type="Label" parent="HUD"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 80.0
offset_right = 100.0
offset_bottom = 110.0
pivot_offset = Vector2(100, 15)
text = "SPEED UP!"
horizontal_alignment = 1

[node name="NearMissLabel" type="Label" parent="HUD"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 140.0
offset_right = 80.0
offset_bottom = 170.0
pivot_offset = Vector2(80, 15)
text = "CLOSE!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageLabel" type="Label" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = -100.0
pivot_offset = Vector2(200, 40)
text = "DAMAGE!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathMessage" type="Label" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -70.0
pivot_offset = Vector2(200, 25)
text = "SOLAR FLAME EXTINGUISHED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RunSummary" type="Control" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="SummaryBG" type="ColorRect" parent="HUD/RunSummary"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="SummaryDistance" type="Label" parent="HUD/RunSummary"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 290.0
offset_bottom = 35.0
text = "Distance: 0m"
horizontal_alignment = 1

[node name="SummaryCoins" type="Label" parent="HUD/RunSummary"]
layout_mode = 1
offset_left = 10.0
offset_top = 40.0
offset_right = 290.0
offset_bottom = 65.0
text = "Coins: 0"
horizontal_alignment = 1

[node name="SummaryTier" type="Label" parent="HUD/RunSummary"]
layout_mode = 1
offset_left = 10.0
offset_top = 70.0
offset_right = 290.0
offset_bottom = 95.0
text = "Speed Tier: 0"
horizontal_alignment = 1

[node name="SummaryBest" type="Label" parent="HUD/RunSummary"]
layout_mode = 1
offset_left = 10.0
offset_top = 100.0
offset_right = 290.0
offset_bottom = 125.0
text = "Best: 0m"
horizontal_alignment = 1

[node name="RestartPrompt" type="Label" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 90.0
offset_right = 150.0
offset_bottom = 130.0
text = "Press R to restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlsHint" type="Label" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -60.0
offset_right = 250.0
offset_bottom = -20.0
text = "Swipe ←→: Lanes | Tap/Swipe ↑: Jump | Hold: Boost | Swipe ↑ + Hold: Boost Jump"
horizontal_alignment = 1
vertical_alignment = 1
